Fix sender information being cut-off in 2-row card view
Fixes an issue where the sender's name and email address would be in too large a font, and cut-off, when the card size was set to two rows instead of 3 rows.

--- a/userChrome.css
+++ b/userChrome.css
@@ -836,6 +836,13 @@ tr.table-layout.selected.current {
 	display: none !important;
 }
 
+/* Target cards with approximately 2-row height */
+tr.card-layout[style*="height: 49px"] .sender,
+tr.card-layout[style*="height: 50px"] .sender {
+    font-size: 1rem !important;
+    font-weight: 500 !important;
+    margin-top: 5px !important;
+}
 
 /* DARK MODE */
 @media (prefers-color-scheme: dark) {
@@ -933,3 +940,4 @@ tr.table-layout.selected.current {
 
 
 }
+
